resolved lingering alignment issues, added backer to bottom colors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,7 +113,6 @@
 }
 
 .main {
-  padding: 20px;
   padding-top: 120px;
 }
 
@@ -167,7 +166,7 @@
 }
 
 .top-row {
-  display: flex;
+  /*display: flex;*/
 }
 
 .product-text {
@@ -176,14 +175,14 @@
 
 .product-description {
   font-family: 'Biryani', sans-serif;
-  height: 350px;
+  height: 400px;
   font-weight: bold;
   font-size: 16px;
   background-color: white;
   padding: 30px;
   text-align: left;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
-  margin-right: 15px;
+  width: 65%;
 }
 
 .product-description h2 {
@@ -208,9 +207,9 @@
 }
 
 .edit-product-image {
-  height: 350px;
   display: flex;
   margin-bottom:10px;
+  padding: 0px;
 }
 
 .edit-product-image img {
@@ -293,7 +292,7 @@
 
 .unfinished-pricing-table {
   font-size: .8em;
-  margin-top: 15px;
+  margin-top: 10px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
   margin-bottom: 20px;
 }
@@ -303,8 +302,21 @@
   color: white;
 }
 
+#finished-pricing {
+  padding-left: 10px;
+  padding-right: 0px;
+}
+
+#unfinished-pricing {
+  padding-left: 0px;
+  padding-right: 10px;
+}
+
 .finishes {
-  /*display: flex;*/
-  justify-content: space-between;
+  background-color: white;
   text-align: center;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
+  padding-top: 30px;
+  padding-bottom: 10px;
+  margin-bottom: 50px;
 }
